# Attendance_system

./: .env  Attendance_system.code-workspace  README.md  Testy projekt.docx  cam_systems.py  dbtest.sqlite3  fixtures.json  instalace.md  install.md  main.py  package-lock.json  package.json  project.md  project_cz.md  pyproject.toml  readme.md  seznam.md  tsconfig.json  vektor.json
API/: serializers.py  views.py
accounts/: forms.py  tests.py  tests_selenium.py  views.py
app_dashboard/: forms.py  models.py  tests.py  views.py
app_dashboard/templates/: dashboard_base.html
app_dashboard/templatetags/: custom_filters.py
app_main/: admin.py  cam.py  cam_systems.py  forms.py  models.py  views.py
app_main/migrations/: 0001_initial.py  0002_alter_employee_postal_code.py  0002_alter_facevector_face_vector.py  0002_facevector_face_vector_fernet.py  0003_alter_employee_postal_code.py  0003_alter_facevector_face_vector_fernet.py  0004_alter_employee_phone_number_and_more.py  0004_alter_facevector_face_vector.py  0004_alter_facevector_face_vector_fernet.py  0005_alter_employee_city_alter_employee_date_of_birth_and_more.py  0005_alter_facevector_face_vector.py  0005_alter_userpicture_image1_alter_userpicture_image2_and_more.py  0006_alter_employee_city_alter_employee_date_of_birth_and_more.py  0006_department_employee_department.py  (+25 more)
attendance/: cam_systems.py  history_status_manager.py  populate_db.py  settings.py  tests_forms.py  tests_models.py  tests_selenium.py  tests_views.py  urls.py
install/: instalace.md
templates/: 404.html  base.html  dashboard_base.html
(+223 files in other folders)
